--- a/web_app/templates/base.html
+++ b/web_app/templates/base.html
@@ -29,5 +29,14 @@
     crossorigin="anonymous"></script>
 
   {% block scripts %}{% endblock %}
+  {% with messages = get_flashed_messages() %} {% if messages %}
+  <div class="alert alert-info">
+      <ul>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+      </ul>
+  </div>
+  {% endif %} {% endwith %}
 </body>
 </html>
