Small display adjustment

--- a/web_app/templates/admin/custom_list.html
+++ b/web_app/templates/admin/custom_list.html
@@ -20,7 +20,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- Page Content -->
-<div id="total-rows-display" class="d-flex align-items-center justify-content-between gap-3" style="gap: 1rem;right: 350px;">
+<div id="total-rows-display" class="d-flex align-items-center justify-content-between gap-3" style="gap: 1rem;right: 400px;top: 8px;">
     <strong style="color: white;" data-tooltip="Total number of rows in the table">
         Total Rows: {{ count }}
     </strong>
